Fix media query for disclaimer styling on smaller screens

--- a/html/marveltravel/css/disclaimer.css
+++ b/html/marveltravel/css/disclaimer.css
@@ -14,3 +14,10 @@
     font-size: 9px;
     text-align: justify;
 }
+
+@media screen and (max-width: 768px){
+    .disclaimer{
+        width: 100%;
+        margin: 0;
+    }
+}
